--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "php":          ">=5.3.0",
+        "EHER/PHPUnit": "1.6"
     },
     "autoload": {
         "psr-0": { "jtreminio\\TestExtensions": "TestExtensions/" }
