--- a/composer.json
+++ b/composer.json
@@ -13,15 +13,15 @@
         }
     ],
     "require": {
-        "php":          ">=5.3.0",
-        "EHER/PHPUnit": "1.6"
+        "php":             ">=5.3.0",
+        "phpunit/phpunit": ">=3.7.0"
     },
     "autoload": {
         "psr-0": { "jtreminio\\TestExtensions": "src/" }
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0"
+            "dev-master": "1.0.1"
         }
     }
 }
