--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     },
     "extra": {
         "branch-alias": {
-            "master": "1.0.2"
+            "dev-master": "1.0.x-dev"
         }
     }
 }
